[3.6] bpo-31655: Validate keyword names in SimpleNamespace constructor. (GH-3909) (cherry picked from commit 79ba471488b936abda5ba5234b1ea90cbc94cae6)